[package]
name = "box-pusher"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[dependencies]
duku = { path = "../../duku", features = ["png", "glsl"] }
specs = { version = "0.16.1", default-features = false }
kira = "0.3.0"
gilrs = "0.8.0"
specs-derive = "0.4.1"
serde = "1.0.123"
serde_json = "1.0.61"
